--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -45,6 +46,20 @@
     <div id="ejercicio12"></div>
     <button id="btn12">Ejercicio 12</button>
     
+    <div id="ejercicio14">
+        <div id="div1"></div>
+        <div id="div2"></div>
+        <div id="div3"></div>
+    </div>
+    <button id="btn14">Ejercicio 14</button>
+
+    <div id="ejercicio14">
+        <h2>Ejercicio 14</h2>
+        <button id="btnAnterior14">Anterior</button>
+        <button id="btnSiguiente14">Siguiente</button>
+
+        <div id="contenedor14"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
